.k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: at-agent-ui
  labels:
    io.arcotech.app: at-agent-ui
    io.arcotech.service: api
  annotations:
    reloader.stakater.com/search: "true"
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 60%
      maxUnavailable: 40%
  selector:
    matchLabels:
      io.arcotech.app: at-agent-ui
      io.arcotech.service: api
  template:
    metadata:
      labels:
        io.arcotech.app: at-agent-ui
        io.arcotech.service: api
    spec:
      containers:
      - name: at-agent-ui
        image: ghcr.io/arcotech-services/at-agent-ui:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 300m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        readinessProbe:
          httpGet:
            path: $(HEALTH_CHECK)
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: $(HEALTH_CHECK)
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
      restartPolicy: Always
      imagePullSecrets:
      - name: arcotech-docker-registry-api
