.k8s/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    io.arcotech.component: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: NodePort
